--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,7 +25,7 @@ file(MAKE_DIRECTORY ${SHADER_BUILD_DIR})
 function(compile_shader SHADER_SOURCE SHADER_BINARY)
 	add_custom_command(
 		OUTPUT ${SHADER_BINARY}
-		COMMAND ${GLSLC_EXECUTABLE} ${SHADER_SOURCE} -o ${SHADER_BINARY}
+		COMMAND ${GLSLC_EXECUTABLE} ${SHADER_SOURCE} -o ${SHADER_BINARY} -O
 		DEPENDS ${SHADER_SOURCE}
 		COMMENT "Compiling ${SHADER_SOURCE} to SPIR-V"
 	)
@@ -40,7 +40,7 @@ file(GLOB_RECURSE SHADER_SOURCES
 
 foreach(SHADER_SOURCE ${SHADER_SOURCES})
 	get_filename_component(FILE_NAME ${SHADER_SOURCE} NAME)
-	compile_shader(${SHADER_SOURCE} "${SHADER_BUILD_DIR}/${FILE_NAME}.u32")
+	compile_shader(${SHADER_SOURCE} "${SHADER_BUILD_DIR}/${FILE_NAME}.spv")
 endforeach()
 
 add_custom_target(compile_shaders ALL DEPENDS ${SHADER_TARGETS})
@@ -56,7 +56,7 @@ set_source_files_properties(${SOURCE} PROPERTIES COMPILE_FLAGS "-Wall")
 set_source_files_properties(${THIRDPARTY} PROPERTIES COMPILE_FLAGS "-O3")
 
 add_executable(app ${SOURCE} ${THIRDPARTY})
-target_include_directories(app PRIVATE src thirdparty)
+target_include_directories(app PRIVATE include src thirdparty)
 target_link_libraries(app PRIVATE Vulkan::Vulkan SDL2::SDL2)
 
 add_dependencies(app compile_shaders)
